testsuite/poke.pkl/attr-diag-1.pk
/* { dg-do compile } */

var a = 1U'sssize; /* { dg-error "" } */
